--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/native": "^6.0.13",
+    "@types/react-native": "~0.69.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "axios": "^1.1.3",
+    "eslint": "^8.25.0",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.18",
+    "prettier": "^2.7.1",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-web": "~0.18.7",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
